--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,24 +3,16 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --primary-white: #F9F6EF;
+  --primary-black: #282828;
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
+  --color-primary-white: var(--primary-white);
+  --color-primary-black: var(--primary-black);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  --font-poppins: var(--font-poppins);
 }
