--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,7 @@
   --foreground: #171717;
   --primary-white: #F9F6EF;
   --primary-black: #282828;
+  --primary-orange: #F56E0F;
 }
 
 @theme inline {
@@ -12,6 +13,7 @@
   --color-foreground: var(--foreground);
   --color-primary-white: var(--primary-white);
   --color-primary-black: var(--primary-black);
+  --color-primary-orange: var(--primary-orange);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
   --font-poppins: var(--font-poppins);
